force-app/main/default/objects/Yoda_Error_log__c/Yoda_Error_log__c.object-meta.xml
<CustomObject>
    <label>Yoda Error log</label>
    <nameField>
        <displayFormat>YODA_EL-{0000000}</displayFormat>
        <label>Yoda Error log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Yoda Error logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>