force-app/main/default/objects/Yoda_Error_log__c/fields/Error_Generated_By__c.field-meta.xml
<CustomField>
    <fullName>Error_Generated_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stores the relationship with the user.</description>
    <label>Error Generated By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Yoda_Error_logs</relationshipName>
    <type>Lookup</type>
</CustomField>