force-app/main/default/objects/Yoda_Error_log__c/fields/Error_Type__c.field-meta.xml
<CustomField>
    <fullName>Error_Type__c</fullName>
    <description>Store the type of error.</description>
    <label>Error Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Backend Process Error</fullName>
            </value>
            <value>
                <fullName>Other Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>