force-app/main/default/objects/Yoda_Error_log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Error_Brief__c</columns>
    <columns>Error_Description__c</columns>
    <columns>Error_Type__c</columns>
    <columns>Error_Generated_By__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>